# gRPCExample

./: CMakeLists.txt  CMakeLists.txt.bak  Makefile  README.md  TestBase64.cpp  protoc_cpp.sh  read.md  run.sh  test.cc  test2.cc  textfeature.grpc.pb.cc  textfeature.grpc.pb.h  textfeature.pb.cc  textfeature.proto  textfeature_client.cc  textfeature_server.cc
cppjieba-master/include/: textfeature.grpc.pb.cc  textfeature.pb.h
cppjieba-master/include/cppjieba-master/include/: textfeature_client.cc
